<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/area_layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_search_white"
        android:minHeight="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:background="@drawable/shape_gray_border_text"
                android:text="@string/cancel"
                android:textColor="@color/color_blue"
                android:textSize="16sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:textSize="18sp"
                android:textColor="@color/color_purple"/>

            <RadioGroup
                android:id="@+id/rdg_select_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rdo_vietnamese"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:drawableRight="@drawable/ic_vietnam"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:text="@string/vietnamese"/>

                <RadioButton
                    android:id="@+id/rdo_english"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:drawableRight="@drawable/ic_english"
                    android:drawablePadding="6dp"
                    android:layout_height="wrap_content"
                    android:text="@string/english"/>


            </RadioGroup>


        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <com.ttn.stationarymanagement.presentation.custom_view.MButtonActionBlue
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:background="@drawable/state_background_button_blue"
                android:text="@string/change"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>